# PyWEB_HW7

./: README.md
HW07/: config.ini  main.py  my_select.py  pyproject.toml  seed.py
HW07/migrations/: env.py
HW07/migrations/versions/: 57a5f6501e0b_init.py
HW07/src/: crud.py  db.py  models.py
