[tool.poetry]
name = "hw07"
version = "0.1.0"
description = ""
authors = ["Denis Bilokon <greenjuiced@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.8"
alembic = "^1.10.2"
psycopg2 = "^2.9.5"
faker = "^18.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
